net and gross wpm

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="body">
             <div class="container">
                 <div class="text-container">
-                    this is a random text to find the best one
+                    The sun
                 </div>
                 <Gm_textarea__>
                     <div class="text-area">
