--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <title>FCI - SCU | Type speed</title>
         <link rel="stylesheet"
             href="assets/styling/main.css">
+        <link rel="stylesheet"
+            href="assets/libs/fontawesome/all.min.css">
     </head>
 
     <body>
@@ -32,7 +34,9 @@
         <div class="body">
             <div class="container">
                 <div class="text-container">
-                    The sun
+                    The waves crashed against the rocky shore, sending salty spray into the air. Seagulls wheeled
+                    overhead, their cries
+                    mingling with the sound of the surf as it echoed off the cliffs.
                 </div>
                 <Gm_textarea__>
                     <div class="text-area">
@@ -42,6 +46,34 @@
             </div>
         </div>
 
+        <footer class="footer">
+            Made with
+            <span style="color: red; font-size: 18px">&#10084;</span> by -
+            <a target="_blank"
+                href="#"> Yahia Elbanna </a>
+            <br />
+            <div class="social-links"
+                style="margin-top: 20px;">
+                <a href="https://github.com/yahaielbnna"
+                    target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://codepen.io/yahiaelbnna"
+                    target="_blank">
+                    <i class="fa-brands fa-codepen"></i>
+                </a>
+                <a href="https://www.facebook.com/yahia.elbanna.3"
+                    target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/yahia-elbnna/"
+                    target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </div>
+        </footer>
+
+        <script src="assets/libs/fontawesome/all.min.js"></script>
         <script src="assets/scripts/gmsmpl.js"></script>
         <script src="assets/scripts/main.js"></script>
     </body>
