add retry button

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </div>
         <div class="body">
             <div class="container">
-                <div class="text-container">
-                    The waves crashed against the rocky shore, sending salty spray into the air. Seagulls wheeled
+                <div class="text-container">hello
+                    <!-- The waves crashed against the rocky shore, sending salty spray into the air. Seagulls wheeled
                     overhead, their cries
-                    mingling with the sound of the surf as it echoed off the cliffs.
+                    mingling with the sound of the surf as it echoed off the cliffs. -->
                 </div>
                 <Gm_textarea__>
                     <div class="text-area">
