--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="base-line"></div>
-            <h1>Typing spead area...</h1>
+            <h1 id="typing_speed_area">Typing speed area...</h1>
             <div class="score">
                 <h2 class="score-number"></h2>
             </div>
