--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <footer class="footer">
+        <footer class="footer main_footer">
             Made with
             <span style="color: red; font-size: 18px">&#10084;</span> by -
             <a target="_blank"
