simplify the text area content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="body">
             <div class="container">
                 <div class="text-container">
-                    The waves crashed against the rocky shore, sending salty spray into the air. Seagulls wheeled
+                    the waves crashed against the rocky shore, sending salty spray into the air. seagulls wheeled
                     overhead, their cries
                     mingling with the sound of the surf as it echoed off the cliffs.
                 </div>
